--- a/index.html
+++ b/index.html
@@ -19,19 +19,17 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">      
-                        <span class="material-symbols-rounded">person</span>                  
+                        <i class="material-symbols-rounded">person</i>                  
                         <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">       
-                        <span class="material-symbols-rounded">vpn_key</span>                
+                        <i class="material-symbols-rounded">vpn_key</i>                
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.htm">Esqueci a senha<span class="material-symbols-rounded">
-                        mail
-                        </span></a>
+                    <a href="esqueci.htm" class="botao">Esqueci a senha<i class="material-symbols-rounded">mail</i></a>
                 </form>
             </div>
         </section>
